--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,19 +1,21 @@
-title:  Lagrange
-tagline:  a minimalist Jekyll theme
+title:  Welcome to ZHANG FANGLI
+tagline:
 author:
-  name: "Paul Le"
-  twitter:  paululele
+  name: "funtry"
+  twitter:  funtry@qq.com
 
 menu:
-- {name: 'About', url: 'about.html'}
-- {name: 'Writing', url: 'writing.html'}
-- {name: 'Contact', url: 'contact.html'}
+- {name: 'ZHANG', url: 'about.html'}
+- {name: 'CV', url: 'cv.html'}
+- {name: 'Publication', url: 'publication.html'}
+- {name: 'Project', url: 'project.html'}
+- {name: 'Contact Fangli', url: 'contact.html'}
 
-social:
-- {icon: 'github', link: 'https://www.github.com/lenpaul'}
-- {icon: 'twitter', link: 'https://twitter.com/paululele'}
-- {icon: 'instagram', link: 'https://instagram.com/paululele'}
-- {icon: 'linkedin', link: 'http://www.linkedin.com/in/lenpaul/'}
-- {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
+# social:
+# - {icon: 'github', link: 'https://www.github.com/lenpaul'}
+# - {icon: 'twitter', link: 'https://twitter.com/paululele'}
+# - {icon: 'instagram', link: 'https://instagram.com/paululele'}
+# - {icon: 'linkedin', link: 'http://www.linkedin.com/in/lenpaul/'}
+# - {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
