--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -19,3 +19,6 @@ menu:
 # - {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
+
+# google-analytics
+google_analytics: UA-102082551-1
